bzip2ida/c2/cadvise
/data/output_dir/patch/bzip2/ida/clang/O2/bzip2-clang-O2/cadvise/src/bzip2.c:1255:10: error: use of undeclared identifier 'unk_417F17'
fwrite( &unk_417F17, 0xF0uLL, 1uLL, stderr); 
         ^
1 error generated.
make: *** [/data/output_dir/patch/bzip2/ida/clang/O2/bzip2-clang-O2/cadvise/src/obj/bzip2.o] Error 1
